REI 8.2 - Display History - Draggable Component - Multi Select Filtering Screen - Better Craftable Filter - Fix #850 - Fix #845 - Fix #832 - Fix #731 - Fix #839 - Fix #804 - Fix EvilCraft

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
@@ -254,7 +254,7 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Vpravo (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Opravit místo po knize receptů (když je zakázána kniha receptů):",
   "config.roughlyenoughitems.lighterButtonHover": "Zesvětlit tlačítko při najetí:",
-  "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "Filtr vyrobitelných:",
+  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filtr vyrobitelných:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Užitečná tlačítka:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Příkaz gamemode:",
   "config.roughlyenoughitems.commands.giveCommand": "Příkaz give:",
