--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -85,6 +85,7 @@
   "error.rei.internal.error": "Internal Error: %s",
   "error.rei.recipe.not.unlocked": "Recipe not unlocked in Recipe Book.",
   "error.rei.not.supported.move.items": "Move Items is not supported with this recipe and this container.",
+  "text.rei.save.recipes": "Press %s on this recipe to save it for later.",
   "error.rei.no.handlers.applicable": "No handlers are applicable.",
   "error.rei.multi.errors": "Multiple Errors:",
   "rei.rei.no.slot.in.inv": "Can't find any space for item in the inventory",
@@ -131,6 +132,8 @@
   "text.rei.remove_favorites_tooltip": " \n§7Press %s to remove this from favorites.",
   "text.rei.working_station": "Working Station",
   "text.rei.release_export": "Release %s to export",
+  "text.rei.ask_to_export": "Do you wish to export \"%s\"?",
+  "text.rei.ask_to_export.subtitle": "This will export %d displays as images.",
   "text.rei.recipe_id": "\n%sRecipe Id: %s",
   "text.rei.recipe_screen_type.selection": "Recipe Screen Type Selection",
   "text.rei.recipe_screen_type.selection.sub": "You can always edit this setting again via the config screen.",
@@ -260,7 +263,7 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Right (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Fix Vanilla Tab Container (When Recipe Book Disabled):",
   "config.roughlyenoughitems.lighterButtonHover": "Lighter Button Hover:",
-  "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "Craftable Filter:",
+  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Craftable Filter:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Utils Buttons:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Game Mode Command:",
   "config.roughlyenoughitems.commands.giveCommand": "Give Command:",
@@ -306,6 +309,7 @@
   "config.roughlyenoughitems.filteringRulesScreen": "Customized Filtering Rules",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Create Filtering Rule",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Delete",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "Try Dragging!",
   "rule.roughlyenoughitems.filtering.manual": "Manual Filtering",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Manually select what to hide and show.",
   "rule.roughlyenoughitems.filtering.search": "Search Filtering",
