Add accepted stacks to the tooltip

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -68,7 +68,8 @@
   "text.rei.cheat_items": "Gave [{item_name}§f] x{item_count} to {player_name}.",
   "text.rei.failed_cheat_items": "§cFailed to give items.",
   "text.rei.too_long_nbt": "§cItem NBT is too long to be applied in multiplayer.",
-  "text.rei.tag_match": "Accepts Tag: #%s",
+  "text.rei.accepts": "Accepts following:",
+  "text.rei.tag_accept": "Tag: #%s",
   "text.rei.performance": "Performance Analysis",
   "text.rei.shapeless": "Shapeless",
   "ordering.rei.ascending": "Ascending",
