Update JEI Assets

--- a/jei-internals-workaround/src/main/resources/assets/jei/lang/it_it.json
+++ b/jei-internals-workaround/src/main/resources/assets/jei/lang/it_it.json
@@ -21,35 +21,70 @@
   "jei.tooltip.bookmarks": "Segnalibri JEI",
   "jei.tooltip.bookmarks.usage.nokey": "Associa un tasto per i segnalibri JEI nelle tue inpostazioni dei comandi.",
   "jei.tooltip.bookmarks.usage.key": "Passa il mouse su un ingrediente e premi \"%s\" per aggiungerlo ai segnalibri.",
-  "jei.tooltip.bookmarks.not.enough.space": "Non c'è abbastanza spazio per la schermata JEI qui.",
+  "jei.tooltip.bookmarks.not.enough.space": "Non c'è abbastanza spazio per la schermata dei segnalibri JEI qui.",
 
   "_comment": "Error Tooltips",
   "jei.tooltip.error.recipe.transfer.missing": "Oggetti mancanti",
   "jei.tooltip.error.recipe.transfer.inventory.full": "L'inventario è pieno",
-  "jei.tooltip.error.recipe.transfer.unknown": "Errore sconosciuto, guarda i log",
+  "jei.tooltip.error.recipe.transfer.unknown": "Errore sconosciuto, consultare i log",
   "jei.tooltip.error.recipe.transfer.no.server": "Nel server deve essere installata la JEI",
+  "jei.tooltip.error.recipe.transfer.disabled": "Nelle configurazioni del server lo spostamento delle ricette della JEI è disabilitato",
   "jei.tooltip.error.recipe.transfer.too.large.player.inventory": "La ricetta è troppo grande per essere fatta in una griglia 2x2.",
   "jei.tooltip.error.crash": "Errore suggerimento, guarda i log",
 
   "_comment": "Error Messages",
   "jei.chat.error.command.too.long": "Affinche' questo comando possa essere gestito, nel server deve essere installato JEI. Per Minecraft e' troppo lungo",
-  "jei.chat.error.no.cheat.permission.1": "Non hai il permesso per abilitare la cheat mode della JEI.",
-  "jei.chat.error.no.cheat.permission.2": "I permessi vengono dati a chi è in Creative o a chi può azionare il commando /give.",
+  "jei.chat.error.no.cheat.permission.1": "Non hai il permesso per abilitare la modalità trucchi della JEI.",
+  "jei.chat.error.no.cheat.permission.disabled": "Su questo server, la modalità trucchi della JEI è disabilitata per tutti i giocatori.",
+  "jei.chat.error.no.cheat.permission.enabled": "Su questo server, i seguenti tipi di giocatori possono usare la modalità trucchi della JEI:",
+  "jei.chat.error.no.cheat.permission.creative": "giocatori che sono in modalità Creativa",
+  "jei.chat.error.no.cheat.permission.op": "giocatori che hanno i permessi di Operatore (/op)",
+  "jei.chat.error.no.cheat.permission.give": "giocatori che possono usare /give",
 
   "_comment": "Key Bindings",
+  "jei.key.category.overlays": "JEI (Sovraimpressione)",
   "key.jei.toggleOverlay": "Mostra/nascondi JEI",
   "key.jei.focusSearch": "Seleziona la barra di ricerca",
-  "key.jei.showRecipe": "Mostra ricetta",
-  "key.jei.showUses": "Mostra usi",
-  "key.jei.recipeBack": "Mostra ricetta precedente",
-  "key.jei.toggleCheatMode": "Disabilitarla/abilitara la modalità trucchi",
-  "key.jei.toggleEditMode": "Attiva/disattiva la modalità nascondi/modifica",
   "key.jei.previousPage": "Mostra la pagina precedente",
   "key.jei.nextPage": "Mostra la pagina successiva",
+  "key.jei.toggleBookmarkOverlay": "Mostra/nascondi ingredienti aggiunto ai segnalibri",
+  
+  "jei.key.category.recipe.gui": "JEI (Ricette)",
+  "key.jei.recipeBack": "Mostra ricetta precedente",
   "key.jei.previousCategory": "Mostra categoria ricetta precedente",
   "key.jei.nextCategory": "Mostra categoria ricetta successiva",
-  "key.jei.bookmark": "Aggiungi/rimuovi un ingrediente aggiunto ai segnalibri",
-  "key.jei.toggleBookmarkOverlay": "Mostra/nascondi ingredienti aggiunto ai segnalibri",
+  "key.jei.previousRecipePage": "Pagina Ricette precedente",
+  "key.jei.nextRecipePage": "Pagina Ricette successiva",
+
+  "jei.key.category.cheat.mode": "JEI (Modalità Trucchi)",  
+  "key.jei.toggleCheatMode": "Disabilitare/abilitare la modalità trucchi",
+  "key.jei.cheatOneItem": "Ottieni 1 oggetto",
+  "key.jei.cheatOneItem2": "Ottieni 1 oggetto",
+  "key.jei.cheatItemStack": "Ottieni 1 stack",
+  "key.jei.cheatItemStack2": "Ottieni 1 stack",
+
+  "jei.key.category.hover.config.button": "JEI (Tenendo il mouse sopra il pulsante di configurazione)",
+  "key.jei.toggleCheatModeConfigButton": "Attiva/Disattiva modalità trucchi",
+  
+  "jei.key.category.edit.mode": "JEI (Modalità Modifica)",
+  "key.jei.toggleEditMode": "Attiva/Disattiva Modalità Nascondi Ingredienti",
+  "key.jei.toggleHideIngredient": "Nascondi ingrediente",
+  "key.jei.toggleWildcardHideIngredient": "Nascondi ingrediente (wildcard)",
+  
+  "jei.key.category.mouse.hover": "JEI (Tenendo il mouse sopra)",
+  "key.jei.bookmark": "Aggiungi/rimuovi ai segnalibri",
+  "key.jei.showRecipe": "Mostra Ricetta",
+  "key.jei.showRecipe2": "Mostra Ricetta",
+  "key.jei.showUses": "Mostra Usi",
+  "key.jei.showUses2": "Mostra Usi",
+
+  "jei.key.category.search": "JEI (Filtri di Ricerca)",
+  "key.jei.clearSearchBar": "Cancella i Filtri di Ricerca",
+  "key.jei.previousSearch": "Ricerca Precedente",
+  "key.jei.nextSearch": "Ricerca Successiva",
+
+  "jei.key.category.dev.tools": "JEI (Strumenti degli Sviluppatori)",
+  "key.jei.copy.recipe.id": "Copia l'ID ricetta nella Clipboard",
 
   "_comment": "Config",
   "config.jei": "Configurazione della JEI",
@@ -121,10 +156,14 @@
   "gui.jei.category.fuel.smeltCount": "Cucina %s oggetti",
   "gui.jei.category.brewing": "Alchimia",
   "gui.jei.category.brewing.steps": "Passi: %s",
+  "gui.jei.category.compostable": "Compostabile",
+  "gui.jei.category.compostable.chance": "Probabilità: %s%%",
   "gui.jei.category.itemInformation": "Descrizione",
 
   "_comment": "Messages",
-  "jei.message.configured": "Install the \"Configured\" mod to access the in-game config",
+  "jei.message.configured": "Installa la mod \"Configured\" per accedere alle configurazioni di gioco",
+  "jei.message.copy.recipe.id.success": "ID Ricetta Copiato nella clipboard: %s",
+  "jei.message.copy.recipe.id.failure": "Impossibile Copiare l'ID Ricetta nella clipboard, l'ID Ricetta è sconosciuto",
 
   "_comment": "DEBUG (for debug mode, do not need translation)",
   "description.jei.wooden.door.1": "Wooden Doors allow you to block monsters from entering your building.\\nTesting sentences.",
