--- a/jei-internals-workaround/src/main/resources/assets/jei/lang/sv_se.json
+++ b/jei-internals-workaround/src/main/resources/assets/jei/lang/sv_se.json
@@ -11,17 +11,17 @@
   "jei.tooltip.item.colors": "Färger: %s",
   "jei.tooltip.shapeless.recipe": "Formlöst recept",
   "jei.tooltip.cheat.mode.button.enabled": "Fuskläget är aktiverat",
-  "jei.tooltip.cheat.mode.how.to.disable.hotkey": "Tryck på %s för att slå på/av det.",
-  "jei.tooltip.cheat.mode.how.to.disable.hover.config.button.hotkey": "%s för att slå på/av det.",
+  "jei.tooltip.cheat.mode.how.to.disable.hotkey": "Tryck på \"%s\" för att slå på/av det.",
+  "jei.tooltip.cheat.mode.how.to.disable.hover.config.button.hotkey": "%s här för att slå på/av det.",
   "jei.tooltip.recipe.by": "Recept av: %s",
   "jei.tooltip.recipe.id": "Recept-ID: %s",
-  "jei.tooltip.not.enough.space": "Det finns inte tillräckligt mycket utrymme för att visa JEI här.",
+  "jei.tooltip.not.enough.space": "Det finns inte tillräckligt mycket utrymme för att visa överlägget för JEI:s ingredienslista här.",
   "jei.tooltip.ingredient.list.disabled": "JEI:s överlägg är inaktiverat.",
   "jei.tooltip.ingredient.list.disabled.how.to.fix": "Tryck på %s för att aktivera det.",
   "jei.tooltip.bookmarks": "JEI-bokmärken",
-  "jei.tooltip.bookmarks.usage.nokey": "Lägg till ett kortkommando för JEI-bokmärken i dina kontrollinställningar.",
+  "jei.tooltip.bookmarks.usage.nokey": "Lägg till ett tangentkombination för JEI-bokmärken i dina kontrollinställningar.",
   "jei.tooltip.bookmarks.usage.key": "Lägg musen över en ingrediens och tryck på \"%s\" för att bokmärka den.",
-  "jei.tooltip.bookmarks.not.enough.space": "Det finns inte tillräckligt mycket utrymme för att visa bokmärken här.",
+  "jei.tooltip.bookmarks.not.enough.space": "Det finns inte tillräckligt mycket utrymme för att visa överlägget för JEI:s bokmärken här.",
 
   "_comment": "Error Tooltips",
   "jei.tooltip.error.recipe.transfer.missing": "Föremål saknas",
@@ -33,7 +33,7 @@
   "jei.tooltip.error.crash": "Fel i inforuta, se loggen",
 
   "_comment": "Error Messages",
-  "jei.chat.error.command.too.long": "JEI måste finnas på servern för att hantera detta chattkommando, det är för lång för Minecraft att skicka.",
+  "jei.chat.error.command.too.long": "JEI måste vara installerad på servern för att hantera detta chattkommando då det är för lång för Minecraft att skicka.",
   "jei.chat.error.no.cheat.permission.1": "Du har inte behörighet att använda JEI:s fuskläge.",
   "jei.chat.error.no.cheat.permission.disabled": "JEI:s fuskläge har inaktiverats för alla spelare på denna server.",
   "jei.chat.error.no.cheat.permission.enabled": "Följande typer av spelare kan använda JEI:s fuskläge på denna server:",
@@ -42,19 +42,50 @@
   "jei.chat.error.no.cheat.permission.give": "spelare som kan använda /give",
 
   "_comment": "Key Bindings",
-  "key.jei.toggleOverlay": "Visa/dölj JEI",
-  "key.jei.focusSearch": "Markera sökfält",
-  "key.jei.showRecipe": "Visa recept",
-  "key.jei.showUses": "Visa användningsområden",
-  "key.jei.recipeBack": "Visa tidigare visad receptsida",
-  "key.jei.toggleCheatMode": "Slå på/av fuskläge",
-  "key.jei.toggleEditMode": "Slå på/av redigeringsläge",
-  "key.jei.previousPage": "Visa föregående sida",
-  "key.jei.nextPage": "Visa nästa sida",
-  "key.jei.previousCategory": "Visa föregående receptkategori",
-  "key.jei.nextCategory": "Visa nästa receptkategori",
-  "key.jei.bookmark": "Lägg till/ta bort bokmärkt ingrediens",
+  "jei.key.category.overlays": "JEI (överlägg)",
+  "key.jei.toggleOverlay": "Visa/dölj JEI:s överlägg",
+  "key.jei.focusSearch": "Markera sökfältet",
+  "key.jei.previousPage": "Föregående sida",
+  "key.jei.nextPage": "Nästa sida",
   "key.jei.toggleBookmarkOverlay": "Visa/dölj bokmärkta ingredienser",
+
+  "jei.key.category.recipe.gui": "JEI (recept)",
+  "key.jei.recipeBack": "Föregående recept",
+  "key.jei.previousCategory": "Föregående receptkategori",
+  "key.jei.nextCategory": "Nästa receptkategori",
+  "key.jei.previousRecipePage": "Föregående receptsida",
+  "key.jei.nextRecipePage": "Nästa receptsida",
+  "key.jei.closeRecipeGui": "Stäng receptgränssnittet",
+
+  "jei.key.category.cheat.mode": "JEI (fuskläge)",
+  "key.jei.toggleCheatMode": "Slå på/av fuskläge",
+  "key.jei.cheatOneItem": "Fuska fram 1 föremål",
+  "key.jei.cheatOneItem2": "Fuska fram 1 föremål",
+  "key.jei.cheatItemStack": "Fuska fram 1 föremålsgrupp",
+  "key.jei.cheatItemStack2": "Fuska fram 1 föremålsgrupp",
+
+  "jei.key.category.hover.config.button": "JEI (lägg musen över konfigurationsknappen)",
+  "key.jei.toggleCheatModeConfigButton": "Slå på/av fuskläge",
+
+  "jei.key.category.edit.mode": "JEI (redigeringsläge)",
+  "key.jei.toggleEditMode": "Dölj/visa ingrediensläge",
+  "key.jei.toggleHideIngredient": "Dölj ingrediens",
+  "key.jei.toggleWildcardHideIngredient": "Dölj ingrediens (jokertecken)",
+
+  "jei.key.category.mouse.hover": "JEI (lägg musen över föremål)",
+  "key.jei.bookmark": "Lägg till/ta bort bokmärkt ingrediens",
+  "key.jei.showRecipe": "Visa recept",
+  "key.jei.showRecipe2": "Visa recept",
+  "key.jei.showUses": "Visa användningsområden",
+  "key.jei.showUses2": "Visa användningsområden",
+
+  "jei.key.category.search": "JEI (sökfilter)",
+  "key.jei.clearSearchBar": "Rensa sökfilter",
+  "key.jei.previousSearch": "Föregående sökning",
+  "key.jei.nextSearch": "Nästa sökning",
+
+  "jei.key.category.dev.tools": "JEI (utvecklingsverktyg)",
+  "key.jei.copy.recipe.id": "Kopiera recept-ID till urklipp",
 
   "_comment": "Config",
   "config.jei": "Konfiguration för JEI",
@@ -66,7 +97,7 @@
   "config.jei.mode.cheatItemsEnabled": "Fuskläge",
   "config.jei.mode.cheatItemsEnabled.comment": "Ge föremål istället för att visa receptet.",
   "config.jei.mode.editEnabled": "Dölj ingrediensläge",
-  "config.jei.mode.editEnabled.comment": "Dölj och visa ingredienser genom att klicka på dem i listan.",
+  "config.jei.mode.editEnabled.comment": "Dölj och visa ingredienser genom att klicka på dem i ingredienslistan.",
   "config.jei.interface": "Gränssnitt",
   "config.jei.interface.comment": "Alternativ för användargränssnittet.",
   "config.jei.interface.overlayEnabled": "Visa ingredienslistan",
@@ -91,11 +122,11 @@
   "config.jei.advanced": "Avancerat",
   "config.jei.advanced.comment": "Avancerade konfigurationsalternativ för att ändra hur JEI fungerar.",
   "config.jei.advanced.itemBlacklist": "Svartlista för ingredienser",
-  "config.jei.advanced.itemBlacklist.comment": "Lista över ingredienser som inte bör visas i listan. Format: modId[:name[:meta]]. Läget för att dölja ingredienser kommer automatiskt lägga till eller ta bort element här.",
+  "config.jei.advanced.itemBlacklist.comment": "Lista över ingredienser som inte bör visas i ingredienslistan. Format: modId[:name[:meta]]. Läget för att dölja ingredienser kommer automatiskt lägga till eller ta bort element här.",
   "config.jei.advanced.colorSearchEnabled": "Aktivera färgsökning",
   "config.jei.advanced.colorSearchEnabled.comment": "Sök ingredienser efter färg och visa färgerna i inforutorna för listan.",
   "config.jei.advanced.debugModeEnabled": "Felsökningsläge",
-  "config.jei.advanced.debugModeEnabled.comment": "Endast användbart gör JEI-utvecklare, lägger till testingredienser och några felsökningsrecept.",
+  "config.jei.advanced.debugModeEnabled.comment": "Endast användbart för JEI-utvecklare, lägger till testingredienser och några felsökningsrecept.",
   "config.jei.advanced.centerSearchBarEnabled": "Centrera sökfältet",
   "config.jei.advanced.centerSearchBarEnabled.comment": "Placera JEI:s sökfält längst ned i mitten på skärmen.",
   "config.jei.advanced.modNameFormat": "Namnformat för moddar",
@@ -105,7 +136,7 @@
   "config.jei.advanced.maxRecipeGuiHeight": "Maximal bredd för receptgränssnittet",
   "config.jei.advanced.maxRecipeGuiHeight.comment": "Maximal höjd för receptgränssnittet.",
   "config.jei.advanced.giveMode": "Placeringsläge",
-  "config.jei.advanced.giveMode.comment": "Välj om JEI ska placera ingredienser direkt i utrustningen (inventory) eller plocka upp dem med musen (mouse_pickup).",
+  "config.jei.advanced.giveMode.comment": "Välj om JEI ska placera ingredienser direkt i förrådet (inventory) eller plocka upp dem med musen (mouse_pickup).",
 
   "_comment": "Hide Ingredients Mode",
   "gui.jei.editMode.description": "Läge för att dölja ingredienser:",
@@ -126,10 +157,14 @@
   "gui.jei.category.fuel.smeltCount": "Smälter %s föremål",
   "gui.jei.category.brewing": "Bryggning",
   "gui.jei.category.brewing.steps": "Steg: %s",
+  "gui.jei.category.compostable": "Kompostering",
+  "gui.jei.category.compostable.chance": "Chans: %s %%",
   "gui.jei.category.itemInformation": "Information",
 
   "_comment": "Messages",
   "jei.message.configured": "Installera modden \"Configured\" för att få åtkomst till konfigurationen i spelet",
+  "jei.message.copy.recipe.id.success": "Kopierade recept-ID till urklipp: %s",
+  "jei.message.copy.recipe.id.failure": "Misslyckades att kopiera recept-ID till urklipp, recept-ID är okänt",
 
   "_comment": "DEBUG (for debug mode, do not need translation)",
   "description.jei.wooden.door.1": "Wooden Doors allow you to block monsters from entering your building.\\nTesting sentences.",
