--- a/jei-internals-workaround/src/main/resources/assets/jei/lang/de_de.json
+++ b/jei-internals-workaround/src/main/resources/assets/jei/lang/de_de.json
@@ -161,7 +161,7 @@
   "_comment": "DEBUG (for debug mode, do not need translation)",
   "description.jei.wooden.door.1": "Wooden Doors allow you to block monsters from entering your building.\\nTesting sentences.",
   "description.jei.wooden.door.2": "Clicking on a door changes its state from open to closed and vice versa.",
-  "description.jei.wooden.door.3": "Wooden Doors can be opened/closed via Redstone Circuits."
+  "description.jei.wooden.door.3": "Wooden Doors can be opened/closed via Redstone Circuits.",
   "description.jei.debug.formatting.1": "Testing %s formatting replacements.",
   "description.jei.debug.formatting.2": "Testing %s %s formatting replacements.",
   "description.jei.debug.formatting.3": "%s nested"
