--- a/jei-internals-workaround/src/main/resources/assets/jei/lang/en_us.json
+++ b/jei-internals-workaround/src/main/resources/assets/jei/lang/en_us.json
@@ -45,29 +45,32 @@
   "jei.key.category.overlays": "JEI (Overlays)",
   "key.jei.toggleOverlay": "Show/Hide JEI Overlays",
   "key.jei.focusSearch": "Select Search Bar",
-  "key.jei.previousPage": "Show Previous Page",
-  "key.jei.nextPage": "Show Next Page",
+  "key.jei.previousPage": "Previous Page",
+  "key.jei.nextPage": "Next Page",
   "key.jei.toggleBookmarkOverlay": "Show/Hide Bookmarked Ingredients",
 
   "jei.key.category.recipe.gui": "JEI (Recipes)",
-  "key.jei.recipeBack": "Show Previously Viewed Recipe",
-  "key.jei.previousCategory": "Show Previous Recipe Category",
-  "key.jei.nextCategory": "Show Next Recipe Category",
-  "key.jei.previousRecipePage": "Show Previous Recipe Page",
-  "key.jei.nextRecipePage": "Show Next Recipe Page",
+  "key.jei.recipeBack": "Previous Recipe",
+  "key.jei.previousCategory": "Previous Recipe Category",
+  "key.jei.nextCategory": "Next Recipe Category",
+  "key.jei.previousRecipePage": "Previous Recipe Page",
+  "key.jei.nextRecipePage": "Next Recipe Page",
+  "key.jei.closeRecipeGui": "Close Recipes GUI",
 
   "jei.key.category.cheat.mode": "JEI (Cheat Mode)",
   "key.jei.toggleCheatMode": "Toggle Cheat Mode",
-  "key.jei.toggleCheatModeConfigButton": "Toggle Cheat Mode (mouse over config button)",
   "key.jei.cheatOneItem": "Cheat 1 item",
   "key.jei.cheatOneItem2": "Cheat 1 item",
-  "key.jei.cheatItemStack": "Cheat 1 stack of items",
-  "key.jei.cheatItemStack2": "Cheat 1 stack of items",
+  "key.jei.cheatItemStack": "Cheat 1 stack",
+  "key.jei.cheatItemStack2": "Cheat 1 stack",
+
+  "jei.key.category.hover.config.button": "JEI (Hovering with Mouse over Config Button)",
+  "key.jei.toggleCheatModeConfigButton": "Toggle Cheat Mode",
 
   "jei.key.category.edit.mode": "JEI (Edit Mode)",
   "key.jei.toggleEditMode": "Toggle Hide Ingredients Mode",
-  "key.jei.toggleHideIngredient": "Hide an ingredient",
-  "key.jei.toggleWildcardHideIngredient": "Hide an ingredient using wildcard",
+  "key.jei.toggleHideIngredient": "Hide ingredient",
+  "key.jei.toggleWildcardHideIngredient": "Hide ingredient (wildcard)",
 
   "jei.key.category.mouse.hover": "JEI (Hovering with Mouse)",
   "key.jei.bookmark": "Add/Remove Bookmark",
@@ -77,9 +80,12 @@
   "key.jei.showUses2": "Show Uses",
 
   "jei.key.category.search": "JEI (Search Filter)",
-  "key.jei.clearSearchBar": "Clear the Search Filter",
-  "key.jei.previousSearch": "Previous Search in History",
-  "key.jei.nextSearch": "Next Search in History",
+  "key.jei.clearSearchBar": "Clear Search Filter",
+  "key.jei.previousSearch": "Previous Search",
+  "key.jei.nextSearch": "Next Search",
+
+  "jei.key.category.dev.tools": "JEI (Dev Tools)",
+  "key.jei.copy.recipe.id": "Copy Recipe ID to Clipboard",
 
   "_comment": "Config",
   "config.jei": "JEI Config",
@@ -157,6 +163,14 @@
 
   "_comment": "Messages",
   "jei.message.configured": "Install the \"Configured\" mod to access the in-game config",
+  "jei.message.copy.recipe.id.success": "Copied Recipe ID to clipboard: %s",
+  "jei.message.copy.recipe.id.failure": "Failed to Copy Recipe ID to clipboard, the Recipe ID is unknown",
+
+  "_comment": "Key Combinations",
+  "jei.key.combo.shift": "SHIFT + %s",
+  "jei.key.combo.control": "CTRL + %s",
+  "jei.key.combo.command": "CMD + %s",
+  "jei.key.combo.alt": "ALT + %s",
 
   "_comment": "DEBUG (for debug mode, do not need translation)",
   "description.jei.wooden.door.1": "Wooden Doors allow you to block monsters from entering your building.\\nTesting sentences.",
