--- a/jei-internals-workaround/src/main/resources/assets/jei/lang/es_es.json
+++ b/jei-internals-workaround/src/main/resources/assets/jei/lang/es_es.json
@@ -11,36 +11,80 @@
   "jei.tooltip.item.colors": "Colores: %s",
   "jei.tooltip.shapeless.recipe": "Receta sin forma",
   "jei.tooltip.cheat.mode.button.enabled": "Modo trampa",
-  "jei.tooltip.cheat.mode.how.to.disable.hotkey": "Pulsa %s para activar.",
+  "jei.tooltip.cheat.mode.how.to.disable.hotkey": "Pulsa \"%s\" para alternar.",
   "jei.tooltip.cheat.mode.how.to.disable.hover.config.button.hotkey": "%s aquí para activar.",
   "jei.tooltip.recipe.by": "Receta por: %s",
   "jei.tooltip.recipe.id": "ID de receta: %s",
   "jei.tooltip.not.enough.space": "No hay espacio suficiente para mostrar la lista de ingredientes aquí.",
   "jei.tooltip.ingredient.list.disabled": "La superposición de JEI está desactivada.",
-  "jei.tooltip.ingredient.list.disabled.how.to.fix": "Pulse %s para activar.",
+  "jei.tooltip.ingredient.list.disabled.how.to.fix": "Pulse \"%s\" para activar.",
+  "jei.tooltip.bookmarks": "Marcadores de JEI",
+  "jei.tooltip.bookmarks.usage.nokey": "Añade un atajo para los marcadores de JEI en la configuración de controles.",
+  "jei.tooltip.bookmarks.usage.key": "Coloca el cursor sobre un ingrediente y pulsa \"%s\" para marcarlo.",
+  "jei.tooltip.bookmarks.not.enough.space": "No hay suficiente espacio para mostrar la lista de marcadores de JEI superpuesta aquí.",
 
   "_comment": "Error Tooltips",
   "jei.tooltip.error.recipe.transfer.missing": "Faltan objetos",
   "jei.tooltip.error.recipe.transfer.inventory.full": "El inventario está lleno",
   "jei.tooltip.error.recipe.transfer.unknown": "Error desconocido, comprueba el log",
   "jei.tooltip.error.recipe.transfer.no.server": "El servidor debe tener instalado JEI",
+  "jei.tooltip.error.recipe.transfer.disabled": "La configuración del servidor ha desactivado la transferencia de recetas de JEI",
   "jei.tooltip.error.recipe.transfer.too.large.player.inventory": "La receta es muy grande para fabricarla desde el inventario",
   "jei.tooltip.error.crash": "Error de tooltip, comprueba el log",
 
   "_comment": "Error Messages",
   "jei.chat.error.command.too.long": "JEI debe estar en el servidor para manejar este comando de chat, es demasiado largo para que Minecraft lo envíe.",
   "jei.chat.error.no.cheat.permission.1": "No tienes permiso para usar el modo trampa de JEI.",
-  "jei.chat.error.no.cheat.permission.2": "Se otorga permiso a los jugadores que pueden usar \"/give\" o están en modo creativo.",
+  "jei.chat.error.no.cheat.permission.disabled": "En este servidor, el modo trampa de JEI está desactivado para todos los jugadores.",
+  "jei.chat.error.no.cheat.permission.enabled": "En este servidor, los siguientes tipos de jugadores pueden utilizar el modo trampa de JEI:",
+  "jei.chat.error.no.cheat.permission.creative": "jugadores que están en modo creativo",
+  "jei.chat.error.no.cheat.permission.op": "jugadores que tienen el estado de operador (/op)",
+  "jei.chat.error.no.cheat.permission.give": "jugadoras que pueden usar /give",
 
   "_comment": "Key Bindings",
-  "key.jei.toggleOverlay": "Alternar superposición de lista de elementos",
+  "jei.key.category.overlays": "JEI (Overlays)",
+  "key.jei.toggleOverlay": "Alternar superposiciones de JEI",
   "key.jei.focusSearch": "Selecionar barra de búsqueda",
-  "key.jei.showRecipe": "Mostrar receta",
-  "key.jei.showUses": "Mostrar los usos",
-  "key.jei.recipeBack": "Mostrar receta anterior",
+  "key.jei.previousPage": "Página anterior",
+  "key.jei.nextPage": "Página siguiente",
+  "key.jei.toggleBookmarkOverlay": "Alternar ingredientes marcados",
+
+  "jei.key.category.recipe.gui": "JEI (Recetas)",
+  "key.jei.recipeBack": "Receta anterior",
+  "key.jei.previousCategory": "Categoría de recetas anterior",
+  "key.jei.nextCategory": "Categoría de recetas siguiente",
+  "key.jei.previousRecipePage": "Página de recetas anterior",
+  "key.jei.nextRecipePage": "Página de recetas siguiente",
+
+  "jei.key.category.cheat.mode": "JEI (Modo trampa)",
   "key.jei.toggleCheatMode": "Alternar modo trampa",
-  "key.jei.previousPage": "Mostrar página anterior",
-  "key.jei.nextPage": "Mostrar página anterior",
+  "key.jei.cheatOneItem": "Cheat 1 item",
+  "key.jei.cheatOneItem2": "Cheat 1 item",
+  "key.jei.cheatItemStack": "Cheat 1 stack",
+  "key.jei.cheatItemStack2": "Cheat 1 stack",
+
+  "jei.key.category.hover.config.button": "JEI (Colocar cursor sobre el botón de configuración)",
+  "key.jei.toggleCheatModeConfigButton": "Alternar modo trampa",
+
+  "jei.key.category.edit.mode": "JEI (Modo edición)",
+  "key.jei.toggleEditMode": "Alternar el modo de ocultar ingredientes",
+  "key.jei.toggleHideIngredient": "Ocultar ingrediente",
+  "key.jei.toggleWildcardHideIngredient": "Ocultar ingrediente (comodín)",
+
+  "jei.key.category.mouse.hover": "JEI (Colocar cursor encima)",
+  "key.jei.bookmark": "Alternar marcador",
+  "key.jei.showRecipe": "Mostrar receta",
+  "key.jei.showRecipe2": "Mostrar receta",
+  "key.jei.showUses": "Mostrar usos",
+  "key.jei.showUses2": "Mostrar usos",
+
+  "jei.key.category.search": "JEI (Filtro de búsqueda)",
+  "key.jei.clearSearchBar": "Limpiar filtro de búsqueda",
+  "key.jei.previousSearch": "Búsqueda anterior",
+  "key.jei.nextSearch": "Búsqueda siguiente",
+
+  "jei.key.category.dev.tools": "JEI (Herramientas de desarrollo)",
+  "key.jei.copy.recipe.id": "Copiar ID de la receta en portapapeles",
 
   "_comment": "Config",
   "config.jei": "Configuración de JEI",
@@ -57,6 +101,8 @@
   "config.jei.interface.comment": "Opciones relacionadas con la interfaz de usuario.",
   "config.jei.interface.overlayEnabled": "Lista de objetos habilitada",
   "config.jei.interface.overlayEnabled.comment": "Muestra la lista de objetas tras abrir la interfaz",
+  "config.jei.interface.bookmarkOverlayEnabled": "Mostrar superposición de lista de marcadores",
+  "config.jei.interface.bookmarkOverlayEnabled.comment": "Mostrar la superposición de la lista de marcadores junto a las interfaces abiertas.",
   "config.jei.search": "Opciones de búsqueda",
   "config.jei.search.comment": "Opciones relacionadas con la barra de búsqueda",
   "config.jei.search.modNameSearchMode": "@Nombre del mod",
@@ -86,6 +132,8 @@
   "config.jei.advanced.modNameFormat.comment": "Cómo debe formatearse el nombre del mod en la información sobre herramientas para la interfaz JEI. Dejar en blanco para deshabilitar.",
   "config.jei.advanced.maxColumns": "Anchura máxima",
   "config.jei.advanced.maxColumns.comment": "El ancho máximo de la lista de ingredientes.",
+  "config.jei.advanced.maxRecipeGuiHeight": "Altura máxima del GUI de recetas",
+  "config.jei.advanced.maxRecipeGuiHeight.comment": "La altura máxima del GUI de la receta.",
   "config.jei.advanced.giveMode": "Modo de obtener",
   "config.jei.advanced.giveMode.comment": "Elija si JEI debe dar elementos directamente al inventario (inventory) o recogerlos con el mouse (mouse_pickup).",
 
@@ -96,20 +144,32 @@
 
   "_comment": "Recipe Categories",
   "gui.jei.category.craftingTable": "Fabricando",
-  "gui.jei.category.smelting": "Cocinando",
+  "gui.jei.category.stoneCutter": "Cortando piedras",
+  "gui.jei.category.smelting": "Fundiendo",
+  "gui.jei.category.smoking": "Ahumando",
+  "gui.jei.category.blasting": "Chisporroteando",
+  "gui.jei.category.campfire": "Cocinando en hoguera",
   "gui.jei.category.smelting.experience": "%s EXP",
+  "gui.jei.category.smelting.time.seconds": "%ss",
   "gui.jei.category.fuel": "Combustible",
-  "gui.jei.category.fuel.smeltCount.single": "Quema 1 item",
-  "gui.jei.category.fuel.smeltCount": "Quema %s ítems",
-  "gui.jei.category.brewing": "Fermentar",
+  "gui.jei.category.fuel.smeltCount.single": "Quema 1 objeto",
+  "gui.jei.category.fuel.smeltCount": "Quema %s objetos",
+  "gui.jei.category.brewing": "Fermentando",
   "gui.jei.category.brewing.steps": "Pasos: %s",
+  "gui.jei.category.compostable": "Compostable",
+  "gui.jei.category.compostable.chance": "Probabilidad: %s%%",
   "gui.jei.category.itemInformation": "Información",
 
   "_comment": "Messages",
-  "jei.message.configured": "Install the \"Configured\" mod to access the in-game config",
+  "jei.message.configured": "Instala el mod \"Configured\" para acceder a la configuración del juego",
+  "jei.message.copy.recipe.id.success": "Copiar ID de la receta en portapapeles: %s",
+  "jei.message.copy.recipe.id.failure": "Fallo al copiar el ID de la receta en portapapeles, el ID de la receta es desconocido",
 
   "_comment": "DEBUG (for debug mode, do not need translation)",
   "description.jei.wooden.door.1": "Las puertas de madera te permiten bloquear la entrada de monstruos a tu edificio.\\nFrases de prueba.",
   "description.jei.wooden.door.2": "Al hacer clic en una puerta, su estado cambia de abierto a cerrado y viceversa.",
-  "description.jei.wooden.door.3": "Las puertas de madera pueden abrirse/cerrarse mediante circuitos de piedra roja."
+  "description.jei.wooden.door.3": "Las puertas de madera pueden abrirse/cerrarse mediante circuitos de piedra roja.",
+  "description.jei.debug.formatting.1": "Probando %s reemplazos de formato.",
+  "description.jei.debug.formatting.2": "Probando %s %s reemplazos de formato.",
+  "description.jei.debug.formatting.3": "%s anidados"
 }
